--- a/plot.ipynb
+++ b/plot.ipynb
@@ -48,7 +48,7 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "q_learning_score_path = 'scores/'\n",
+    "q_learning_score_path = 'Q-learning_scores/'\n",
     "sarsa_score_path = 'SARSA_score/'\n",
     "x = [i for i in range(250, 10050, 250)]\n",
     "\n",
